# apps/api/src/main/kotlin/org/sedaiadesign/api/models/response/portfolio/ProgrammingResponse.kt
@@ -1,0 +1,12 @@
+package org.sedaiadesign.api.models.response.portfolio
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ProgrammingResponse(
+  val title: String,
+  val description: String,
+  val projectPage: String,
+  val sourceCode: String,
+  val documentation: String
+)
